<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.settings.SettingsFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/settings_header_cl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_settings_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.flexbox.FlexboxLayout
                    android:id="@+id/container_flex"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/fragment_side_margin"
                    android:layout_marginTop="@dimen/fragment_top_margin"
                    android:layout_marginEnd="@dimen/fragment_side_margin"
                    app:alignItems="stretch"
                    app:flexWrap="wrap"
                    app:justifyContent="space_between"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/settings_title_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="none"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:text="@string/label_settings"
                        android:textColor="@color/headerTextColor"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <FrameLayout
                        android:id="@+id/language_selector"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_alignSelf="auto"
                        app:layout_constraintEnd_toEndOf="parent"/>

                </com.google.android.flexbox.FlexboxLayout>

                <TextView
                    android:id="@+id/enter_code_label_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/fragment_side_margin"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="@dimen/fragment_side_margin"
                    android:text="@string/label_enter_SPKC_code"
                    android:textColor="@color/subtitleTextColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/container_flex" />

                <Button
                    android:id="@+id/code_button"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/default_button_height"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/fragment_side_margin"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="48dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:background="@drawable/default_button_bg_selector"
                    android:minWidth="@dimen/default_button_width"
                    android:text="@string/button_enter_code"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/enter_code_label_tv" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/specify_contact_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/settings_header_cl">

                <TextView
                    android:id="@+id/txt_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/your_contact_number"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.057"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/number_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/_0766877423"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.093"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_number" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/fragment_side_margin"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/subtitleTextColor"
                    android:text="@string/description_your_number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/number_phone" />

                <TextView
                    android:id="@+id/provide_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/provide"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.853"
                    app:layout_constraintStart_toEndOf="@+id/txt_number"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/divider_1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/fragment_side_margin"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="@dimen/fragment_side_margin"
                android:background="@color/dividerGray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/specify_contact_view" />

            <TextView
                android:id="@+id/label_notify_contact_search_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fragment_side_margin"
                android:layout_marginTop="20dp"
                android:text="@string/label_notify_contact_search"
                android:textColor="@color/subtitleTextColor"
                app:layout_constraintEnd_toStartOf="@id/notify_switch"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider_1" />

            <Switch
                android:id="@+id/notify_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/fragment_side_margin"
                android:scaleX="0.9"
                android:scaleY="0.9"
                android:thumb="@drawable/switch_thumb"
                android:track="@drawable/switch_track_red"
                app:layout_constraintBottom_toTopOf="@id/divider_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider_1"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <View
                android:id="@+id/divider_2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/fragment_side_margin"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="@dimen/fragment_side_margin"
                android:background="@color/dividerGray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_notify_contact_search_tv" />

            <TextView
                android:id="@+id/txt_otherSetings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/othersettings"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.088"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider_2" />

            <RelativeLayout
                android:id="@+id/remain_anonymous_rl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/fragment_side_margin"
                android:paddingEnd="@dimen/fragment_side_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_otherSetings">

                <TextView
                    android:id="@+id/buttonBmi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:paddingTop="8dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp"
                    android:text="@string/bmi_calculator"
                    android:textColor="@color/titleTextColor"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="13dp"
                    android:layout_alignEnd="@id/buttonBmi"
                    android:layout_centerVertical="true"
                    android:paddingTop="3dp"
                    android:src="@drawable/ic_chevron_right"
                    app:tint="@color/titleTextColor" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/remain_anonymous_rl_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/fragment_side_margin"
                android:paddingEnd="@dimen/fragment_side_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/remain_anonymous_rl">

                <TextView
                    android:id="@+id/buttonLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:paddingTop="8dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp"
                    android:text="@string/Languages"
                    android:textColor="@color/titleTextColor"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="13dp"
                    android:layout_alignEnd="@id/buttonLanguage"
                    android:layout_centerVertical="true"
                    android:paddingTop="3dp"
                    android:src="@drawable/ic_chevron_right"
                    app:tint="@color/titleTextColor" />
            </RelativeLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>